<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_wallets"
        android:name="com.myapp.watermelonwallet.ui.wallets.WalletsFragment"
        android:label="@string/title_wallets"
        tools:layout="@layout/fragment_wallets" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.myapp.watermelonwallet.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.myapp.watermelonwallet.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>