<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="142dp"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="134dp"
        android:contentDescription="@string/watermelon_wallet_logo"
        android:src="@drawable/img"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editPassword"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="82dp"
        android:hint="@string/tu_clave_watermelon_wallet"
        android:inputType="textPassword"
        android:textColor="#FD0D10"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUsername"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="43dp"
        android:hint="@string/tu_usuario"
        android:textColor="#FD0D10"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="sans-serif"
        android:text="@string/hola_te_damos_la_bienvenida"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="230dp"
        android:background=" #CF5F69"
        android:backgroundTint=" #cf5f69"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF" />

</RelativeLayout>